2009-01-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_scrollbar_stepper), (murrine_draw_scrollbar_slider),
	(murrine_draw_radiobutton), (murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_progressbar_fill),
	(murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider),
	(murrine_rgba_draw_radiobutton), (murrine_rgba_draw_checkbox):
	Fixed rounded scrollbars's corners.
	Various changes in cairo operators in rgba mode, I hope
	that everything renders correctly as before, I can't test it now.

2009-01-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
	Fixed rounded progressbars's corners.

2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/animation.c:
	* src/animation.h:
	* src/cairo-support.c:
	* src/cairo-support.h:
	* src/murrine_draw.c:
	* src/murrine_draw.h:
	* src/murrine_draw_rgba.c:
	* src/murrine_rc_style.c:
	* src/murrine_rc_style.h:
	* src/murrine_style.c:
	* src/murrine_style.h:
	* src/murrine_theme_main.c:
	* src/murrine_types.h:
	* src/support.c:
	* src/support.h:
	Updated Copyright notes for 2009.

2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_entry):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_entry):
	Better GtkEntry focus.

2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_draw_lightborder),
	(murrine_draw_glaze):
	Removed horizontal parameter to lightborder,
	this fixes spinbuttons, but could break vertical widgets,
	please test and report bugs if you see a misplacement
	of the lightborder.

2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_radiobutton),
	(murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_radiobutton),
	(murrine_rgba_draw_checkbox):