@@ -1,3 +1,9 @@
+2009-01-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c (murrine_scale_draw_gradient):
+	* src/murrine_draw_rgba.c (murrine_scale_draw_gradient):
+	Fixed a misalignment of the scale's hightlight.
+
 2009-01-05  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_draw.c (murrine_draw_button),
